--- a/generators/app/templates/src/app/examples/examples.component.html
+++ b/generators/app/templates/src/app/examples/examples.component.html
@@ -6,7 +6,7 @@
     <mat-card-header>
       <mat-card-title>UI</mat-card-title>
       <mat-card-subtitle>
-        Controls, layouts, forms, and theming
+        Buttons, Toggle Buttons, Check Boxes, Radio Buttons, and Slide Toggles
       </mat-card-subtitle>
     </mat-card-header>
   </mat-card>
@@ -15,14 +15,6 @@
       <mat-card-title>API Calls</mat-card-title>
       <mat-card-subtitle>
         Making API calls, subscribing to the response, handling errors, and parsing data into models
-      </mat-card-subtitle>
-    </mat-card-header>
-  </mat-card>
-  <mat-card [routerLink]="'unit-tests'">
-    <mat-card-header>
-      <mat-card-title>Unit Tests</mat-card-title>
-      <mat-card-subtitle>
-        Writing unit tests, mocking services, mocking data, and spying on method calls
       </mat-card-subtitle>
     </mat-card-header>
   </mat-card>
