--- a/generators/app/templates/src/app/examples/examples.component.scss
+++ b/generators/app/templates/src/app/examples/examples.component.scss
@@ -1,3 +1,9 @@
+:host {
+  height: calc(100% - 300px); // 300px for padding
+  padding: 150px 10vw;
+  display: block;
+}
+
 #examples-cards {
   display: flex;
   justify-items: auto;
