--- a/generators/app/templates/src/app/welcome/welcome.component.scss
+++ b/generators/app/templates/src/app/welcome/welcome.component.scss
@@ -1,9 +1,10 @@
-@import "../../../sass/variables.scss";
+@import "../../sass/variables.scss";
 
 :host {
   width: 100%;
   max-width: 1200px;
-
+  height: calc(100% - 300px); // 300px for padding
+  padding: 150px 10vw;
   margin: 0 auto;
 
   display: flex;
