--- a/generators/app/templates/src/index.html
+++ b/generators/app/templates/src/index.html
@@ -2,39 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Angular Template</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title><%= appName %></title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.webmanifest">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <meta name="theme-color" content="#1976d2">
-  <style>
-    html,
-    body {
-      min-width: 100%;
-      min-height: 100vh;
-      margin: 0;
-      background: whitesmoke;
-    }
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style>
+        html,
+        body {
+            min-width: 100%;
+            min-height: 100vh;
+            margin: 0;
+            background: whitesmoke;
+        }
 
-    html {
-      overflow-y: scroll;
-    }
-
-    main {
-      height: calc(100% - 50px);
-    }
-
-  </style>
+        main {
+            height: calc(100% - 50px);
+        }
+    </style>
 </head>
 
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <app-root></app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
