--- a/generators/app/templates/src/sass/theme.scss
+++ b/generators/app/templates/src/sass/theme.scss
@@ -1,20 +1,11 @@
-//@import "~@angular/material/prebuilt-themes/indigo-pink.css"; // * temp theme before we get our custom one implemented
 @import "../../node_modules/@angular/material/theming";
+@import "palette.scss";
 @include mat-core();
 
 $primary: #1a2954;
 $accent: #21cf36;
-$warn: #ffc107;
+$warn: #f44336;
 
-$secondary: #757e98;
-$information: #17a2b8;
-$danger: #f44336;
-
-$base-theme: mat-light-theme(mat-palette($mat-blue), mat-palette($mat-yellow), mat-palette($mat-pink));
-$semantic-theme: mat-light-theme(mat-palette($mat-red), mat-palette($mat-purple), mat-palette($mat-green));
+$base-theme: mat-light-theme(mat-palette($primary-palette), mat-palette($accent-palette), mat-palette($warn-palette));
 
 @include angular-material-theme($base-theme);
-
-.success {
-  @include angular-material-theme($semantic-theme);
-}
