Remove App API & update * removed app API * added .build files * moved folders to reflect structure after generation * upgraded to Angular 8 * added/updated auth session files * removed service worker code * updated index.js to reflect changes and generate apps accordingly

--- a/generators/app/templates/app/src/app/welcome/welcome.component.html
+++ b/generators/app/templates/app/src/app/welcome/welcome.component.html
@@ -1,18 +1,18 @@
 <aside>
   <ul>
-    <li><a href="#getting-started">Getting Started</a></li>
-    <li><a href="#running">Building and Running the Application</a></li>
-    <li><a href="#running-locally">Running Locally</a></li>
-    <li><a href="#unit-tests">Running Unit Tests</a></li>
-    <li><a href="#debugging">Debugging</a></li>
-    <li><a href="#debugging-unit-tests">Debugging Unit Tests</a></li>
-    <li><a href="#folder-structure">Folder Structure</a></li>
-    <li><a href="#naming-conventions">Naming Conventions</a></li>
-    <li><a href="#bundling">Bundling the Application</a></li>
-    <li><a href="#service-worker">Configuring the Service Worker</a></li>
-    <li><a href="#adding-code">Adding Your Code</a></li>
-    <li><a href="#deleting-code">Deleting the Example Files</a></li>
-    <li><a href="#next-steps">Next Steps</a></li>
+    <li><a href="welcome#getting-started">Getting Started</a></li>
+    <li><a href="welcome#running">Building and Running the Application</a></li>
+    <li><a href="welcome#running-locally">Running Locally</a></li>
+    <li><a href="welcome#unit-tests">Running Unit Tests</a></li>
+    <li><a href="welcome#debugging">Debugging</a></li>
+    <li><a href="welcome#debugging-unit-tests">Debugging Unit Tests</a></li>
+    <li><a href="welcome#folder-structure">Folder Structure</a></li>
+    <li><a href="welcome#naming-conventions">Naming Conventions</a></li>
+    <li><a href="welcome#bundling">Bundling the Application</a></li>
+    <li><a href="welcome#service-worker">Configuring the Service Worker</a></li>
+    <li><a href="welcome#adding-code">Adding Your Code</a></li>
+    <li><a href="welcome#deleting-code">Deleting the Example Files</a></li>
+    <li><a href="welcome#next-steps">Next Steps</a></li>
   </ul>
 </aside>
 <article>
